--- a/index.html
+++ b/index.html
@@ -161,31 +161,31 @@
             <img src="./media/letter-b.png" alt="img">
         </span>
         <span class="letter-o">
-            <img src="./media/letter-o.png" alt="img">
+            <img src="media/letter-o.png" alt="img">
 
         </span>
         <span class="letter-u">
-            <img src="./media/letter-u.png" alt="img">
+            <img src="media/letter-u.png" alt="img">
 
         </span>
         <span class="letter-n1">
-            <img src="./media/letter-n.png" alt="img">
+            <img src="media/letter-n.png" alt="img">
 
         </span>
         <span class="letter-c">
-            <img src="./media/letter-c.png" alt="img">
+            <img src="media/letter-c.png" alt="img">
 
         </span>
         <span class="letter-i">
-            <img src="./media/letter-i.png" alt="img">
+            <img src="media/letter-i.png" alt="img">
 
         </span>
         <span class="letter-n2">
-            <img src="./media/letter-n.png" alt="img">
+            <img src="media/letter-n.png" alt="img">
 
         </span>
         <span class="letter-g">
-            <img src="./media/letter-g.png" alt="img">
+            <img src="media/letter-g.png" alt="img">
 
         </span>
         <div class="floor"></div>
